# CLSFProcessor

./: .gitignore  CMakeLists.txt  README.md  test_run.bat  todo
Docs/: CLSF syntax tree.xml
config/: jomax3dhead.ini  jomax4dhead.ini  jomax5dhead.ini  jomax5dhead.xml
include/: ICLSFProcessor.h
old_source/: CLSFProcessorTest.cpp  FiveAxisKinematics.h  ICLSFProcessor.cpp  Uni5axis.h  atpconfiguration.h  atptokenizer.h  config.h  stdafx.h
old_source/CLSFParser/: CLSFNodes.h  CLSFNodesAdapt.h  ExpressionCompiler.cpp  ExpressionCompiler.h  ExpressionParser.cpp  ExpressionParser.h  MovementCommands.h
samples/: TORETC_250_BOK.cls  TORETC_250_TORETC.cls  _10_KONTUR_125_N2_162.cls  _11_KONTUR_125_N2_232.cls  _1_KONTUR_NAR_40_N2.cls  _2_KONTUR_VNUT_40_N2.cls  _3_PAZ_125_N2.cls  _4_SVERL_63_N2.cls  _5_SVERL_63_N2_116.cls  _6_KONTUR_125_N2_46.cls  _7_KONTUR_125_N2_116.cls  _8_SVERL_63_N2.cls  _9_SVERL_63_N2.cls  aptwords.tbl  cutcom.clsf  cutcom2.clsf  deep drill.clsf  nurbs.clsf  standart drill.clsf  ust_a.cls  ust_a2.cls
samples/Subprograms/: GMO_BALLPROBE.SPF  GMO_CIRCLE4P.SPF  GMO_DIRPP.SPF  GMO_GAUG.txt  GMO_MADD.SPF  GMO_MEAS.SPF  GMO_MOVE.SPF  GMO_MPOINT.SPF  GMO_PROB.txt  GMO_SAFEMOVE.SPF  GMO_SCAL.SPF  GMO_VLEN.SPF  GMO_WRCONTACT.SPF
source/: CLSFProcessorConsole.cpp  FiveAxisKinematics.cpp  FiveAxisKinematics.h  ICLSFProcessor.cpp  Uni5axis.h  atpconfiguration.h  atptokenizer.h  confSerialize.h  config.h  dllmain.cpp  formatter.cpp  formatter.h  kinematicsConf.h  matrix.h  vec.h
source/CLSFParser/: CLSFNodes.cpp  CLSFNodes.h  ExpressionCompiler.cpp  ExpressionCompiler.h  ExpressionParser.cpp  MovementCommands.h
source/refactored/: FiveAxisKinematics.cpp  FiveAxisKinematics.h  Uni5axis.cpp  Uni5axis.h  atptokenizer.cpp  atptokenizer.h  commonConf.h  confSerialize.cpp  confSerialize.h  formatter.cpp  formatter.h  kinematicsConf.h
test/: CLSFParserTest.cpp  CLSFProcessorConsole.cpp  CLSFProcessorTest.cpp
